--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/lodash.debounce": "^4.0.9",
     "dotenv": "^16.3.1",
+    "flatpickr": "^4.6.13",
     "lodash.debounce": "^4.0.8",
     "vue": "^3.3.11",
     "vue-router": "^4.0.13",
